--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-Flask==3.0.3
-Flask-SQLAlchemy==3.1.1
-Flask-Migrate==4.0.5
-psycopg2-binary==2.9.9
+Flask==2.0.1
+Flask-SQLAlchemy==2.5.1
+Flask-Migrate==3.1.0
+python-dotenv==0.19.0
+gunicorn==20.1.0
+psycopg2-binary==2.9.1
