--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,26 @@
-{ "rewrites": [ { "source": "/api/(.)", "destination": "/api/index.py" }, { "source": "/(.)", "destination": "/" } ], "functions": { "api/index.py": { "memory": 1024, "maxDuration": 10 } } }
+{
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/index.py",
+      "use": "@vercel/python"
+    },
+    {
+      "src": "*.html",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/index.py"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/$1"
+    }
+  ],
+  "env": {
+    "PYTHONPATH": "."
+  }
+}
